--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Practice website</title>
+    <title>practice website</title>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,9 +18,17 @@
        <nav id="header-nav" class="navbar navbar-default">
          <div class="container">
            <div class="navbar-header">
-           <a href="index.html" class="">
+            <a href="index.html" class="">
              <div id="logo-img" alt="Logo image"></div>
-           </a>
+            </a>
+
+            <div class="navbar-brand">
+              <a href="index.html"><h1>David chu's china Bistro</h1></a>
+              <p>
+                <img src="images/star-k-logo.png" alt="kosher certification">
+                <span>Kosher Certified</span>
+              </p>
+            </div>
            
         </div>
 
